--- a/stepperForm/stepperForm.html
+++ b/stepperForm/stepperForm.html
@@ -3,31 +3,145 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Payment form</title>
+    <title>stepper form</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
   </head>
-  <body>
-    <form action="#" class="form">
-      <div class="form-step form-step-active">
-        <label>
-          <input type="radio" name="product" value="AlgoExpert" /> AlgoExpert
-        </label>
-        <label>
-          <input type="radio" name="product" value="SystemsExpert" />
-          SystemsExpert
-        </label>
-        <label>
-          <input type="radio" name="product" value="ML Expert" /> ML Expert
-        </label>
-        <label>
-          <input type="radio" name="product" value="FrontendExpert" />
-          FrontendExpert
-        </label>
-        <button class="continue-button width-50 ml-auto" onclick="nextStep('step1', 'step2')">
-          Continue
-        </button>
-      </div> 
-    </form>
+  <body
+    style="
+      background-color: #001119;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    "
+  >
+    <section class="master">
+      <form action="#" class="form">
+        <div class="progressbar">
+          <div class="progress" id="progress"></div>
+          <div
+            class="progress-step progress-step-active"
+            data-title="Product Selection"
+          ></div>
+          <div class="progress-step" data-title="Payment Method"></div>
+          <div class="progress-step" data-title="Payment Form"></div>
+          <div class="progress-step" data-title="Purchase Success"></div>
+        </div>
+
+        <div style="margin-top: 80px">
+          <div class="form-step form-step-active">
+            <div class="input-group">
+              <input type="checkbox" name="algo" id="algo" />
+              <p style="color: rgb(116, 116, 249)">AlgoExpert</p>
+            </div>
+            <div class="input-group group-a">
+              <input type="checkbox" name="system" id="system" />
+              <p style="color: rgb(138, 3, 3)">SystemExpert</p>
+            </div>
+            <div class="input-group group-b">
+              <input type="checkbox" name="ml" id="ml" />
+              <p style="color: orange">MLExpert</p>
+            </div>
+            <div class="input-group group-c">
+              <input type="checkbox" name="front" id="front" />
+              <p style="color: green">FrontExpert</p>
+            </div>
+            <div class="">
+              <a href="" class="btn btn-next">Next</a>
+            </div>
+          </div>
+          <div class="form-step">
+            <div class="input-group">
+              <input type="checkbox" name="bank" id="bank" />
+              <p style="color: rgb(116, 116, 249)">Bank</p>
+            </div>
+            <div class="input-group group-a">
+              <input type="checkbox" name="fonepay" id="fonepay" />
+              <p style="color: rgb(138, 3, 3)">Fonepay</p>
+            </div>
+            <div class="input-group group-b">
+              <input type="checkbox" name="esewa" id="esewa" />
+              <p style="color: orange">Esewa</p>
+            </div>
+            <div class="input-group group-c">
+              <input type="checkbox" name="cash" id="cash" />
+              <p style="color: green">Cash</p>
+            </div>
+            <div class="btns-group">
+              <a href="" class="btn btn-prev">Previous</a>
+              <a href="" class="btn btn-next">Next</a>
+            </div>
+          </div>
+          <div class="form-step">
+            <div
+              class="input-group"
+              style="display: flex; flex-direction: column"
+            >
+              <label>Name</label>
+              <input
+                type="text"
+                name="card"
+                id="card"
+                placeholder="Full Name"
+                class="wid"
+              />
+            </div>
+            <div
+              class="input-group group-a"
+              style="display: flex; flex-direction: column"
+            >
+              <label>Number</label>
+              <input
+                class="wid"
+                type="text"
+                name="number"
+                id="number"
+                placeholder="98XXXXXXXX"
+              />
+            </div>
+            <div
+              class="input-group group-b"
+              style="display: flex; flex-direction: column"
+            >
+              <label>Address</label>
+              <input
+                type="text"
+                name="card"
+                id="card"
+                placeholder="Address"
+                class="wid"
+              />
+            </div>
+            <div
+              class="input-group group-c ext"
+              style="display: flex; flex-direction: column"
+            >
+              <label>Amount</label>
+              <input
+                class="wid"
+                type="text"
+                name="number"
+                id="number"
+                placeholder="Rs."
+              />
+            </div>
+            <div class="btns-group">
+              <a href="" class="btn btn-prev">Previous</a>
+              <a href="" class="btn btn-next">Next</a>
+            </div>
+          </div>
+          <div class="form-step">
+            <div class="input-group">
+              <input type="checkbox" name="success" id="success" />
+              <p style="color: rgb(5, 86, 17)">Success</p>
+            </div>
+            <div class="btns-group">
+              <a href="" class="btn btn-prev">Previous</a>
+              <input type="submit" value="Submit" class="btn" />
+            </div>
+          </div>
+        </div>
+      </form>
+    </section>
   </body>
 </html>
