--- a/webpage/index.html
+++ b/webpage/index.html
@@ -3,41 +3,57 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
-    <title>Your Responsive Website</title>
+    <title>Responsive webpage</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Services</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-      </nav>
-    </header>
+    <div class="container">
+      <div class="navbar">
+        <img src="logo.png" class="logo" />
+        <nav>
+          <ul id="menuList">
+            <li><a href="">Game controllers</a></li>
+            <li><a href="">VR accessories</a></li>
+            <li><a href="">Media Remotes</a></li>
+            <li><a href="">Others</a></li>
+          </ul>
+        </nav>
+        <img src="menu.png" class="menu-icon" onclick="togglemenu()" />
+      </div>
+      <div class="row">
+        <div class="col-1">
+          <h2>PS4 V2<br />DualShock 4</h2>
+          <h3>Wireless Controllers for PS4</h3>
+          <p>(Compatible/Generic)</p>
+          <h4>$32.50</h4>
+          <button type="button">Buy Now<img src="arrow.png" /></button>
+        </div>
+        <div class="col-2">
+          <img src="controller.png" class="controller" />
+          <div class="color-box"></div>
+          <div class="add-btn">
+            <img src="add.png" />
+            <p><small>Add to Cart</small></p>
+          </div>
+        </div>
+      </div>
+      <div class="social-links">
+        <img src="fb.png" />
+        <img src="tw.png" />
+        <img src="ig.png" />
+      </div>
+    </div>
 
-    <main>
-      <section class="hero">
-        <h1>Welcome to Our Website</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        <a href="#" class="btn">Learn More</a>
-      </section>
-
-      <section class="content">
-        <h2>About Us</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-      </section>
-
-      <section class="content">
-        <h2>Our Services</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-      </section>
-    </main>
-
-    <footer>
-      <p>&copy; 2023 Your Company</p>
-    </footer>
+    <script>
+      var menuList = document.getElementById("menuList");
+      menuList.style.maxHeight = "0px";
+      function togglemenu() {
+        if (menuList.style.maxHeight == "0px") {
+          menuList.style.maxHeight = "130px";
+        } else {
+          menuList.style.maxHeight = "0px";
+        }
+      }
+    </script>
   </body>
 </html>
